Dev-RBI/src/objects/CRM_Report__c.object
<CustomObject>
    <description>Used to store list of project reports</description>
    <fields>
        <fullName>FilePath__c</fullName>
        <description>This field will store the link of the report to AWS</description>
        <label>File Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Report__c</fullName>
        <formula>IF(
	OR(Report_Name_Calc__c =&quot;Project Report&quot;, Report_Name_Calc__c =&quot;Tower Report&quot;, Report_Name_Calc__c =&quot;Project Snapshot&quot;, Report_Name_Calc__c =&quot;Unit Report&quot;), 
		HYPERLINK( Which_Report__c &amp;Project__c, &quot;Generate Report&quot;),
		IF (
			Report_Name_Calc__c =&quot;Title Search Report&quot; || Report_Name_Calc__c =&quot;DVU Report&quot;, 
				HYPERLINK(Which_Report__c&amp; Project__c &amp;&quot;&amp;rptName=&quot; &amp;Report_Name__r.Name, &quot;Generate Report&quot;),
			IF(
				Report_Name_Calc__c =&quot;Detail Technical Report&quot;,
					HYPERLINK( &quot;/apex/RBI_Detail_Technical_Report_PDF?Id=&quot; &amp;Project__c, &quot;Generate Report&quot;),
					HYPERLINK( Which_Report__c &amp;Visit__c, &quot;Generate Report&quot;)
					
			)
		)
)</formula>
        <label>Generate Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field will store the name of the report</description>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Stores relationship with project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_Name_Calc__c</fullName>
        <formula>Report_Name__r.Name</formula>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Report</description>
        <label>Report Name</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>CRM Reports</relationshipLabel>
        <relationshipName>CRM_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This will store the status of the report</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Reports pdf.</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>CRM Reports</relationshipLabel>
        <relationshipName>CRM_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Which_Report__c</fullName>
        <label>Which Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CRM Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Report_Name__c</columns>
        <columns>Which_Report__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPT-{0000000}</displayFormat>
        <label>Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>